--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MotionLayoutMock">
-        <activity android:name=".ui.activity.AllAnimsActivity">
+        <activity android:name=".ui.gradient.GradientActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.AllAnimsActivity2">
+        <activity android:name=".ui.activity.RecyclerViewActivity">
 
         </activity>
+        <activity android:name=".ui.activity.AllAnimsActivity"></activity>
+        <activity android:name=".ui.activity.AllAnimsActivity2" />
     </application>
+
 </manifest>
